--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^10.13.1",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.439.0",
     "next": "^14.2.11",
